--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://hotty.pp.ua/hotvideo/assets/css/Navbar-Centered-Links-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <script>
-        var bestLink = "https://www.profitablegatecpm.com/jsxc41dd4?key=842281fa79271b119cccab513e3b191f";
+        var bestLink = "https://aff.bdoffers.tech/?utm_medium=99b19383614b63037afcbdd79584933a6d03bd86&utm_campaign=mohonabeti";
           document.title = "Click here To Watch";
     </script>
     <meta name="facebook-domain-verification" content="g8irgqij5c5ipffnns1jz750hdo0is" />
