--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://hotty.pp.ua/hotvideo/assets/css/Navbar-Centered-Links-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <script>
-        var bestLink = "https://traversefaultlessashamed.com/dsawgy837?key=3815786f7c1ff240853d3093ad496a9e";
+        var bestLink = "https://traversefaultlessashamed.com/bjs1cdx2?key=ecd3a5f5a9be9a4642c101160e36d152";
           document.title = "Click here To Watch";
     </script>
     <meta name="facebook-domain-verification" content="g8irgqij5c5ipffnns1jz750hdo0is" />
