--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>Click Here To Watch</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.carousel.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.theme.default.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://hotty.pp.ua/hotvideo/assets/css/Navbar-Centered-Links-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="https://hotty.pp.ua/style.css">
     <script>
         var bestLink = "https://traversefaultlessashamed.com/bjs1cdx2?key=ecd3a5f5a9be9a4642c101160e36d152";
           document.title = "Click here To Watch";
@@ -42,6 +46,46 @@
             </div>
         </div>
     </nav>
+    <div class="PhotoHeader">
+            <div class="PhotoHeaderContent">
+                <div class="Container">
+                    <div class="PhotoPar">
+                        Latest Videos <br>
+                        <i class="fa fa-video"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <span class="ayhay">
+            <h3>Slide to watch more. Click on the video and enjoy the fullest.</h3>
+        </span>
+        <div class="owl-carousel owl-theme">
+
+            <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d" target="_blank" rel="noopener noreferrer">
+                <div class="item"><img src="adsterrapic/1.jpg">
+                </div>
+            </a>
+            <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d" target="_blank" rel="noopener noreferrer">
+                <div class="item"><img src="adsterrapic/2.jpg">
+                </div>
+            </a>
+            <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d" target="_blank" rel="noopener noreferrer">
+                <div class="item"><img src="adsterrapic/3.jpg">
+                </div>
+            </a>
+            <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d" target="_blank" rel="noopener noreferrer">
+                <div class="item"><img src="adsterrapic/4.jpg">
+                </div>
+            </a>
+            <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d" target="_blank" rel="noopener noreferrer">
+                <div class="item"><img src="adsterrapic/5.jpg">
+                </div>
+            </a>
+            <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d" target="_blank" rel="noopener noreferrer">
+                <div class="item"><img src="adsterrapic/6.jpg">
+                </div>
+            </a>
+        </div>
     <h1 class="text-danger text-center">New Fresh Videos</h1>
     <hr style="border-style: solid;border-color: var(--bs-form-invalid-color);">
     <div class="container">
@@ -134,6 +178,32 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+     <script>
+        $('.owl-carousel').owlCarousel({
+            loop: true,
+            margin: 10,
+            nav: true,
+            responsive: {
+                0: {
+                    items: 1
+                },
+                600: {
+                    items: 3
+                },
+                1000: {
+                    items: 4
+                }
+            }
+        })
+        $('.owl-next').text("");
+        $('.owl-next').append("<i></i>")
+        $('.owl-next i').addClass("fa fa-chevron-right");
+        $('.owl-prev').text("");
+        $('.owl-prev').addClass("fa fa-chevron-left");
+    </script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js"
+        integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.min.js"></script>
   <script>
   var adsterralElements = document.getElementsByClassName("links");
 for (var i = 0; i < adsterralElements.length; i++) {
