--- a/index.html
+++ b/index.html
@@ -61,27 +61,27 @@
         </span>
         <div class="owl-carousel owl-theme">
 
-            <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d" target="_blank" rel="noopener noreferrer">
+            <a href="" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/1.jpg">
                 </div>
             </a>
-            <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d" target="_blank" rel="noopener noreferrer">
+            <a href="" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/2.jpg">
                 </div>
             </a>
-            <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d" target="_blank" rel="noopener noreferrer">
+            <a href="" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/3.jpg">
                 </div>
             </a>
-            <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d" target="_blank" rel="noopener noreferrer">
+            <a href="" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/4.jpg">
                 </div>
             </a>
-            <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d" target="_blank" rel="noopener noreferrer">
+            <a href="" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/5.jpg">
                 </div>
             </a>
-            <a href="https://www.highcpmrevenuegate.com/qt5n9k70h?key=d46bec314d074e623c0cb10d37f6013d" target="_blank" rel="noopener noreferrer">
+            <a href="" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/6.jpg">
                 </div>
             </a>
