--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <meta name="facebook-domain-verification" content="mgtd633t670dtj0wg1on3m22292hqv" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -17,13 +18,13 @@
 <body>
     <header>
 
-        <div class="logo"><a href="https://www.profitablegatecpm.com/ybvxidws6t?key=e5bef1d3e374354fc4d7b58677a8c4ff" target="_blank" rel="noopener noreferrer" class="ahare">Hotty.com</a></div>
+        <div class="logo"><a href="https://www.profitablegatecpm.com/p6etr9xtue?key=d791f06fce7ad9cd9e7f3f0058c184a6" target="_blank" rel="noopener noreferrer" class="ahare">Hotty.com</a></div>
         <div class="menu-icon"><i class="fas fa-bars"></i></div>
         <nav>
             <ul>
-                <li><a href="https://www.profitablegatecpm.com/ybvxidws6t?key=e5bef1d3e374354fc4d7b58677a8c4ff">Home</a></li>
-                <li><a href="https://www.profitablegatecpm.com/ybvxidws6t?key=e5bef1d3e374354fc4d7b58677a8c4ff">About</a></li>
-                <li><a href="https://www.profitablegatecpm.com/ybvxidws6t?key=e5bef1d3e374354fc4d7b58677a8c4ff">Contact</a></li>
+                <li><a href="https://www.profitablegatecpm.com/p6etr9xtue?key=d791f06fce7ad9cd9e7f3f0058c184a6">Home</a></li>
+                <li><a href="https://www.profitablegatecpm.com/p6etr9xtue?key=d791f06fce7ad9cd9e7f3f0058c184a6">About</a></li>
+                <li><a href="https://www.profitablegatecpm.com/p6etr9xtue?key=d791f06fce7ad9cd9e7f3f0058c184a6">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -43,27 +44,27 @@
         </span>
         <div class="owl-carousel owl-theme">
 
-            <a href="https://www.profitablegatecpm.com/ybvxidws6t?key=e5bef1d3e374354fc4d7b58677a8c4ff" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.profitablegatecpm.com/p6etr9xtue?key=d791f06fce7ad9cd9e7f3f0058c184a6" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/1.jpg">
                 </div>
             </a>
-            <a href="https://www.profitablegatecpm.com/ybvxidws6t?key=e5bef1d3e374354fc4d7b58677a8c4ff" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.profitablegatecpm.com/p6etr9xtue?key=d791f06fce7ad9cd9e7f3f0058c184a6" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/2.jpg">
                 </div>
             </a>
-            <a href="https://www.profitablegatecpm.com/ybvxidws6t?key=e5bef1d3e374354fc4d7b58677a8c4ff" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.profitablegatecpm.com/p6etr9xtue?key=d791f06fce7ad9cd9e7f3f0058c184a6" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/3.jpg">
                 </div>
             </a>
-            <a href="https://www.profitablegatecpm.com/ybvxidws6t?key=e5bef1d3e374354fc4d7b58677a8c4ff" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.profitablegatecpm.com/p6etr9xtue?key=d791f06fce7ad9cd9e7f3f0058c184a6" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/4.jpg">
                 </div>
             </a>
-            <a href="https://www.profitablegatecpm.com/ybvxidws6t?key=e5bef1d3e374354fc4d7b58677a8c4ff" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.profitablegatecpm.com/p6etr9xtue?key=d791f06fce7ad9cd9e7f3f0058c184a6" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/5.jpg">
                 </div>
             </a>
-            <a href="https://www.profitablegatecpm.com/ybvxidws6t?key=e5bef1d3e374354fc4d7b58677a8c4ff" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.profitablegatecpm.com/p6etr9xtue?key=d791f06fce7ad9cd9e7f3f0058c184a6" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/6.jpg">
                 </div>
             </a>
@@ -72,43 +73,43 @@
     <hr style="border-style: solid;border-color: var(--bs-form-invalid-color);">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col col-md-4 text-center m-2 p-2"><a class="links" href="https://www.profitablegatecpm.com/ybvxidws6t?key=e5bef1d3e374354fc4d7b58677a8c4ff"><img src="adsterrapic/1.jpg" width="256" height="230"></a>
-                <div class="btn-group" role="group"><a class="btn btn-danger  m-2 links" role="button" href="https://www.profitablegatecpm.com/ybvxidws6t?key=e5bef1d3e374354fc4d7b58677a8c4ff"><svg
+            <div class="col col-md-4 text-center m-2 p-2"><a class="links" href="https://www.profitablegatecpm.com/p6etr9xtue?key=d791f06fce7ad9cd9e7f3f0058c184a6"><img src="adsterrapic/1.jpg" width="256" height="230"></a>
+                <div class="btn-group" role="group"><a class="btn btn-danger  m-2 links" role="button" href="https://www.profitablegatecpm.com/p6etr9xtue?key=d791f06fce7ad9cd9e7f3f0058c184a6"><svg
                             xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
                             viewBox="0 0 16 16" class="bi bi-play m-1 fs-4">
                             <path
                                 d="M10.804 8 5 4.633v6.734zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C4.713 12.69 4 12.345 4 11.692V4.308c0-.653.713-.998 1.233-.696z">
                             </path>
-                        </svg>Play HD</a><a class="btn btn-primary  d-lg-flex m-2 links" role="button" href="https://www.profitablegatecpm.com/ybvxidws6t?key=e5bef1d3e374354fc4d7b58677a8c4ff"><i class="fas fa-download m-1 fs-4"></i>Download</a></div>
+                        </svg>Play HD</a><a class="btn btn-primary  d-lg-flex m-2 links" role="button" href="https://www.profitablegatecpm.com/p6etr9xtue?key=d791f06fce7ad9cd9e7f3f0058c184a6"><i class="fas fa-download m-1 fs-4"></i>Download</a></div>
             </div>
-            <div class="col col-md-4 text-center m-2 p-2"><a class="links" href="https://www.profitablegatecpm.com/ybvxidws6t?key=e5bef1d3e374354fc4d7b58677a8c4ff"><img src="adsterrapic/2.jpg" width="256" height="230"></a>
-                <div class="btn-group" role="group"><a class="btn btn-danger m-2 links" role="button" href="https://www.profitablegatecpm.com/ybvxidws6t?key=e5bef1d3e374354fc4d7b58677a8c4ff"><svg
+            <div class="col col-md-4 text-center m-2 p-2"><a class="links" href="https://www.profitablegatecpm.com/p6etr9xtue?key=d791f06fce7ad9cd9e7f3f0058c184a6"><img src="adsterrapic/2.jpg" width="256" height="230"></a>
+                <div class="btn-group" role="group"><a class="btn btn-danger m-2 links" role="button" href="https://www.profitablegatecpm.com/p6etr9xtue?key=d791f06fce7ad9cd9e7f3f0058c184a6"><svg
                             xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
                             viewBox="0 0 16 16" class="bi bi-play m-1 fs-4">
                             <path
                                 d="M10.804 8 5 4.633v6.734zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C4.713 12.69 4 12.345 4 11.692V4.308c0-.653.713-.998 1.233-.696z">
                             </path>
-                        </svg>Play HD</a><a class="btn btn-primary  d-lg-flex m-2 links" role="button" href="https://www.profitablegatecpm.com/ybvxidws6t?key=e5bef1d3e374354fc4d7b58677a8c4ff"><i class="fas fa-download m-1 fs-4"></i>Download</a></div>
+                        </svg>Play HD</a><a class="btn btn-primary  d-lg-flex m-2 links" role="button" href="https://www.profitablegatecpm.com/p6etr9xtue?key=d791f06fce7ad9cd9e7f3f0058c184a6"><i class="fas fa-download m-1 fs-4"></i>Download</a></div>
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class="col col-md-4 text-center m-2 p-2"><a class="links" href="https://www.profitablegatecpm.com/ybvxidws6t?key=e5bef1d3e374354fc4d7b58677a8c4ff"><img src="adsterrapic/3.jpg" width="256" height="230"></a>
-                <div class="btn-group" role="group"><a class="btn btn-danger  m-2 links" role="button" href="https://www.profitablegatecpm.com/ybvxidws6t?key=e5bef1d3e374354fc4d7b58677a8c4ff"><svg
+            <div class="col col-md-4 text-center m-2 p-2"><a class="links" href="https://www.profitablegatecpm.com/p6etr9xtue?key=d791f06fce7ad9cd9e7f3f0058c184a6"><img src="adsterrapic/3.jpg" width="256" height="230"></a>
+                <div class="btn-group" role="group"><a class="btn btn-danger  m-2 links" role="button" href="https://www.profitablegatecpm.com/p6etr9xtue?key=d791f06fce7ad9cd9e7f3f0058c184a6"><svg
                             xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
                             viewBox="0 0 16 16" class="bi bi-play m-1 fs-4">
                             <path
                                 d="M10.804 8 5 4.633v6.734zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C4.713 12.69 4 12.345 4 11.692V4.308c0-.653.713-.998 1.233-.696z">
                             </path>
-                        </svg>Play HD</a><a class="btn btn-primary  d-lg-flex m-2 links" role="button" href="https://www.profitablegatecpm.com/ybvxidws6t?key=e5bef1d3e374354fc4d7b58677a8c4ff"><i class="fas fa-download m-1 fs-4"></i>Download</a></div>
+                        </svg>Play HD</a><a class="btn btn-primary  d-lg-flex m-2 links" role="button" href="https://www.profitablegatecpm.com/p6etr9xtue?key=d791f06fce7ad9cd9e7f3f0058c184a6"><i class="fas fa-download m-1 fs-4"></i>Download</a></div>
             </div>
-            <div class="col col-md-4 text-center m-2 p-2"><a class="links" href="https://www.profitablegatecpm.com/ybvxidws6t?key=e5bef1d3e374354fc4d7b58677a8c4ff"><img src="adsterrapic/4.jpg" width="256" height="230"></a>
-                <div class="btn-group" role="group"><a class="btn btn-danger  m-2 links" role="button" href="https://www.profitablegatecpm.com/ybvxidws6t?key=e5bef1d3e374354fc4d7b58677a8c4ff"><svg
+            <div class="col col-md-4 text-center m-2 p-2"><a class="links" href="https://www.profitablegatecpm.com/p6etr9xtue?key=d791f06fce7ad9cd9e7f3f0058c184a6"><img src="adsterrapic/4.jpg" width="256" height="230"></a>
+                <div class="btn-group" role="group"><a class="btn btn-danger  m-2 links" role="button" href="https://www.profitablegatecpm.com/p6etr9xtue?key=d791f06fce7ad9cd9e7f3f0058c184a6"><svg
                             xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
                             viewBox="0 0 16 16" class="bi bi-play m-1 fs-4">
                             <path
                                 d="M10.804 8 5 4.633v6.734zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C4.713 12.69 4 12.345 4 11.692V4.308c0-.653.713-.998 1.233-.696z">
                             </path>
-                        </svg>Play HD</a><a class="btn btn-primary  d-lg-flex m-2 links" role="button" href="https://www.profitablegatecpm.com/ybvxidws6t?key=e5bef1d3e374354fc4d7b58677a8c4ff"><i class="fas fa-download m-1 fs-4"></i>Download</a></div>
+                        </svg>Play HD</a><a class="btn btn-primary  d-lg-flex m-2 links" role="button" href="https://www.profitablegatecpm.com/p6etr9xtue?key=d791f06fce7ad9cd9e7f3f0058c184a6"><i class="fas fa-download m-1 fs-4"></i>Download</a></div>
             </div>
         </div>
     </div>
